--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@reown/appkit": "^1.8.1",
     "@reown/appkit-adapter-wagmi": "^1.8.1",
+    "@reown/appkit-siwx": "^1.8.1",
     "@tanstack/react-query": "^5.85.6",
     "convex": "^1.26.0",
     "jose": "^6.1.0",
