--- a/package.json
+++ b/package.json
@@ -36,7 +36,13 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^3.5.3",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "pino-pretty": "^11.3.0"
+  },
+  "overrides": {
+    "lit": "^3.2.0",
+    "lit-html": "^3.2.0",
+    "@lit/reactive-element": "^2.0.4"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
