Add react-window and react-use dependencies to package.json for enhanced UI and utility features

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-dom": "^19.0.0",
     "siwe": "^3.0.0",
     "viem": "^2.36.0",
-    "wagmi": "^2.16.9"
+    "wagmi": "^2.16.9",
+    "react-window": "^1.8.10",
+    "react-use": "^17.5.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
