--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "next": "15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-use": "^17.5.1",
+    "react-window": "^1.8.10",
     "siwe": "^3.0.0",
     "viem": "^2.36.0",
-    "wagmi": "^2.16.9",
-    "react-window": "^1.8.10",
-    "react-use": "^17.5.1"
+    "wagmi": "^2.16.9"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -33,13 +33,14 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-window": "^1.8.8",
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
     "npm-run-all": "^4.1.5",
+    "pino-pretty": "^11.3.0",
     "prettier": "^3.5.3",
     "tailwindcss": "^4",
-    "typescript": "^5",
-    "pino-pretty": "^11.3.0"
+    "typescript": "^5"
   },
   "overrides": {
     "lit": "^3.2.0",
