--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@reown/appkit-siwx": "^1.8.1",
     "@tanstack/react-query": "^5.85.6",
     "convex": "^1.26.0",
+    "convex-helpers": "^0.1.104",
     "jose": "^6.1.0",
     "next": "15.2.3",
     "react": "^19.0.0",
