--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "convex": "^1.26.0",
     "convex-helpers": "^0.1.104",
     "jose": "^6.1.0",
-    "next": "15.2.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next": "15.5.2",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-use": "^17.5.1",
     "react-window": "^1.8.10",
     "siwe": "^3.0.0",
@@ -29,14 +29,17 @@
     "wagmi": "^2.16.9"
   },
   "devDependencies": {
+    "@babel/plugin-syntax-import-attributes": "^7.27.1",
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-window": "^1.8.8",
+    "babel-plugin-react-compiler": "19.1.0-rc.3",
     "eslint": "^9",
-    "eslint-config-next": "15.2.3",
+    "eslint-config-next": "15.5.2",
+    "eslint-plugin-react-hooks": "6.0.0-rc.2",
     "npm-run-all": "^4.1.5",
     "pino-pretty": "^11.3.0",
     "prettier": "^3.5.3",
