--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "pino-pretty": "^11.3.0",
     "prettier": "^3.5.3",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "zod": "^3.23.8"
   },
   "overrides": {
     "lit": "^3.2.0",
@@ -53,8 +54,16 @@
   },
   "pnpm": {
     "onlyBuiltDependencies": [
+      "@reown/appkit",
+      "@tailwindcss/oxide",
+      "bufferutil",
       "esbuild",
-      "@tailwindcss/oxide"
+      "keccak",
+      "secp256k1",
+      "sharp",
+      "unrs-resolver",
+      "utf-8-validate"
     ]
-  }
+  },
+  "packageManager": "pnpm@10.15.1+sha512.34e538c329b5553014ca8e8f4535997f96180a1d0f614339357449935350d924e22f8614682191264ec33d1462ac21561aff97f6bb18065351c162c7e8f6de67"
 }
