--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "predev": "convex dev --until-success && convex dashboard",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint . --max-warnings=0"
   },
   "dependencies": {
     "@reown/appkit": "^1.8.1",
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@babel/plugin-syntax-import-attributes": "^7.27.1",
     "@eslint/eslintrc": "^3",
+    "@next/eslint-plugin-next": "^15.5.2",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
