Add type checking to package.json
- Added a new script for TypeScript type checking using `tsc --noEmit` to enhance type safety in the project.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "predev": "convex dev --until-success && convex dashboard",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint . --max-warnings=0"
+    "lint": "eslint . --max-warnings=0",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@reown/appkit": "^1.8.1",
